[gd_scene load_steps=2 format=3 uid="uid://b4k3hclgvhaxd"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_3rqyj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3rqyj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.133333, 0.2, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MonaChess"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ajedrez de Monas Chinas"
horizontal_alignment = 1

[node name="Version" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Versión 0.1.0"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -108.0
offset_right = 150.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="StoryModeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Modo Historia"

[node name="QuickPlayButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Partida Rápida"

[node name="MultiplayerButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Multijugador Local"

[node name="TutorialButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Tutorial"

[node name="BoardTestButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Probar Tablero"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Ajustes"

[node name="ExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir"

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -438.0
offset_top = -75.0
offset_right = 438.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Versión 0.1.0: Implementación del tablero de ajedrez básico.
Incluye representación visual y sistema de coordenadas."
horizontal_alignment = 1

[connection signal="pressed" from="MenuContainer/BoardTestButton" to="." method="_on_board_test_button_pressed"]
[connection signal="pressed" from="MenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
